@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1029 2009/09/23 22:21:20 martin Exp $
+# $Id: CHANGES,v 1.1030 2009/09/24 19:53:06 ub Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -33,6 +33,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.5 (2009/??/??)
+ - (2009/09/24) Fixed bug#3909 - Optional TicketFreeTimes with AgentTicketCompose
+    break when attaching a file
  - (2009/09/23) Fixed bug#4326 - Notification emails have empty lines by using
     opera at creation time.
  - (2009/09/23) Fixed bug#3001 - Agent ticket queue ordering by priority causes
